--- a/index.html
+++ b/index.html
@@ -250,14 +250,14 @@
             <div id="men-sneaker" class="sneaker col-md-6">
                 <div id="hover-img">
                     <img src="img/men-sneaker.jpg" alt="">
-                    <a href="men.html"><button>Giày Nam</button></a>
+                    <a href="html/men.html"><button>Giày Nam</button></a>
                 </div>
 
             </div>
             <div id="women-sneaker" class="sneaker col-md-6">
                 <div id="hover-img">
                     <img src="img/women-sneaker.jpg" alt="">
-                    <a href="women.html"><button>Giày Nữ</button></a>
+                    <a href="html/women.html"><button>Giày Nữ</button></a>
                 </div>
 
             </div>
